package RoomResponse;
import "data.proto";
import "RoomData.proto";

message ShowRoomListResponse {
	optional Data.List room_list = 1;
}

message RoomPeopleListResponse {
	optional Data.List people_list = 1;
}

message RoomInfoResponse {
	optional RoomData.RoomInfo room_info = 1;
}